javafx + warehouse